[tool.poetry]
name = "pwstorage-backend"
version = "0.1.0"
description = "PasswordStorage backend"
authors = ["Den <denaddressforwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
fastapi = "^0.110.2"
python-multipart = "^0.0.9"
pyfa-converter-v2 = "^2.0.0rc1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0" # Code formatter
mypy = "^1" # Static type checking
isort = "^5.12.0" # Import sorting
flake8 = "^7.0.0" # Linter
flake8-docstrings = "^1.6.0" # Docstring linter


[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
line_length = 120
atomic = true
include_trailing_comma = true
use_parentheses = true
profile = "black"
lines_before_imports = 1
lines_after_imports = 2
combine_as_imports = true
multi_line_output = 3
