[tool.poetry]
name = "pwstorage"
version = "0.1.0"
description = "PasswordStorage backend"
authors = ["Den <denaddressforwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

# FastAPI
fastapi = "^0.110.2" # Web-framework
pydantic = "^2.7.0" # Serialization-framework
pydantic-settings = "^2.2.1" # Pydantic addon for env settings
python-multipart = "^0.0.9" # Multipart form files handling
pyfa-converter-v2 = "^2.0.0rc1" # Utility to convert Pydantic models to FastAPI dependencies
uvicorn = {extras = ["standard"], version = "^0.29.0"} # ASGI web-server

# Database
sqlalchemy = "^2.0.29" # Database-framework
asyncpg = "^0.29.0" # Async postgres driver
alembic = "^1.13.1" # Database migrations
redis = {extras = ["hiredis"], version = "^5.0.4"} # Redis database-framework

# Security
pyjwt = "^2.8.0"
cryptography = "^42.0.8"

# Sentry
sentry-sdk = "^2.11.0"

# CLI
click = "^8.1.7" # CLI framework


[tool.poetry.scripts]
pwstorage = "pwstorage.__main__:main"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0" # Code formatter
isort = "^5.12.0" # Import sorting
flake8 = "^7.0.0" # Linter
flake8-docstrings = "^1.6.0" # Docstring linter
types-click = "^7.1.8" # For Click mypy support
sqlalchemy = {extras = ["mypy"], version = "^2.0.30"}
mypy = "^1.10.0"
pre-commit = "^3.7.1"


[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
line_length = 120
atomic = true
include_trailing_comma = true
use_parentheses = true
profile = "black"
lines_before_imports = 1
lines_after_imports = 2
combine_as_imports = true
multi_line_output = 3


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
